--- a/templates/helperMacros.html
+++ b/templates/helperMacros.html
@@ -1,16 +1,6 @@
-{% macro actionDropDown(account) %}
-    <div class="dropdown">
-        <button class="btn btn-warning dropdown-toggle" type="button" id="dropdow{{ account.id }}" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="true">
-            Aktion
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdown{{ account.id }}">
-            <li><a href="#">Passwort anzeigen</a></li>
-            <li><a href="#">Account editieren</a></li>
-            <li><a href="#">Account löschen</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Abbrechen</a></li>
-        </ul>
+{% macro inputGroup(label, inputCtrl, args) %}
+    <div class="input-group" style="margin-top: 10px">
+        <span class="input-group-addon" id="basic-addon1" style="width: 15em">{{ label }}</span>
+        {{ inputCtrl(class='form-control', kwargs=args) }}
     </div>
 {% endmacro %}
