--- a/templates/Base.html
+++ b/templates/Base.html
@@ -1,10 +1,3 @@
-{% if 'ngApp' in pageValues %}
-    {% set htmlAttr=' ng-app="' + pageValues['ngApp'] + '"' %}
-    {% set bodyAttr=' ng-controller="' + pageValues['ngCtrl'] + '"' %}
-{% else %}
-    {% set htmlAttr='' %}
-    {% set bodyAttr='' %}
-{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +6,7 @@
     {% block script %}
     {% endblock %}
 </head>
-    <body{{ htmlAttr | safe }}{{ bodyAttr | safe }}>
+    <body{{ pageValues.angularApp() }}{{ pageValues.angularCtrl() }}>
         <h1>{{ pageValues['header'] }}
             <small>Passwort Manager</small>
         </h1>
