Register and Login form implemented.

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -7,7 +7,7 @@
     {% endblock %}
 </head>
     <body{{ pageValues.angularApp() }}{{ pageValues.angularCtrl() }}>
-        <h1>{{ pageValues['header'] }}
+        <h1>{{ pageValues.header }}
             <small>Passwort Manager</small>
         </h1>
         <hr>
