--- a/templates/ShowPassword.html
+++ b/templates/ShowPassword.html
@@ -25,6 +25,14 @@
         </tr>
         {% endfor %}
     </table>
-    <br><br>
-    <a class="btn btn-primary" href="/">Zurück zur Liste</a>
+{% endblock %}
+
+{% block navbarBottom %}
+    <table class="navbar-base navbar-bottom">
+        <tr>
+            <td class="navbar-ls">
+                <a class="btn btn-primary navbar-link" href="/">Startseite</a>
+            </td>
+        </tr>
+    </table>
 {% endblock %}
