--- a/templates/ShowPassword.html
+++ b/templates/ShowPassword.html
@@ -18,10 +18,10 @@
             <th>Attribut</th>
             <th>Wert</th>
         </tr>
-        {% for attribute in pageValues['accountAttributes'] %}
+        {% for attribute in pageValues.modelAttribute.attributeList %}
         <tr {% if attribute == 'password' %}class="bg-warning" {% endif %}>
-            <th>{{ attribute }}</th>
-            <td>{{ pageValues['account'][attribute] }}</td>
+            <th>{{ pageValues.modelAttribute[attribute] }}</th>
+            <td>{{ pageValues.account[attribute] }}</td>
         </tr>
         {% endfor %}
     </table>
@@ -32,6 +32,7 @@
         <tr>
             <td class="navbar-ls">
                 <a class="btn btn-primary navbar-link" href="/">Startseite</a>
+                <a class="btn btn-primary navbar-link" href="/editAccount/{{ pageValues.account['id'] }}">Edit</a>
             </td>
         </tr>
     </table>
