--- a/templates/EditAccount.html
+++ b/templates/EditAccount.html
@@ -14,51 +14,55 @@
 {% endblock %}
 
 {% block content %}
-        <form action="/editAccount/0" method="post">
+        <form id="editForm" action="/editAccount/0" method="post">
             {{ pageValues.form.id(style="visibility: hidden;") }}
+            {% set form = pageValues.form %}
             <table class="table formTable">
                 <tr>
-                    <td class="labelCol">Id</td>
+                    <td class="labelCol">{{ form.id.label }}</td>
                     <td>{{ pageValues.account.id }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Anbieter</td>
+                    <td class="labelCol">{{ form.provider.label }}</td>
                     <td>{{ pageValues.form.provider(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Benutzername</td>
+                    <td class="labelCol">{{ form.username.label }}</td>
                     <td>{{ pageValues.form.username(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Passwort</td>
+                    <td class="labelCol">{{ form.password.label }}</td>
                     <td>{{ pageValues.form.password(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Passwortlänge</td>
+                    <td class="labelCol">{{ form.passwordlength.label }}</td>
                     <td>{{ pageValues.form.passwordlength(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Zulässige Zeichen</td>
+                    <td class="labelCol">{{ form.definedcharacter.label }}</td>
                     <td>{{ pageValues.form.definedcharacter(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Sicherheitsfrage</td>
+                    <td class="labelCol">{{ form.question.label }}</td>
                     <td>{{ pageValues.form.question(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Antwort auf die Frage</td>
+                    <td class="labelCol">{{ form.answer.label }}</td>
                     <td>{{ pageValues.form.answer(**{'class':'form-control'}) }}</td>
                 </tr>
                 <tr>
-                    <td class="labelCol">Letzte Änderung</td>
+                    <td class="labelCol"><label>{{ pageValues.modelAttribute.lastmodify }}</label></td>
                     <td>{{ pageValues.account.lastmodify }}</td>
-                </tr>
-                <tr>
-                    <td class="text-danger">{{ pageValues.form.errors }}</td>
-                    <td class="text-center"><input class="btn btn-success" type="submit" value="Speichern"></td>
                 </tr>
             </table>
             {{ pageValues.form.csrf_token }}
+            <div class="formTable">
+                <ul>
+                    {% for error in pageValues.form.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
         </form>
 {% endblock %}
 
@@ -67,7 +71,16 @@
         <tr>
             <td class="navbar-ls">
                 <a class="btn btn-primary navbar-link" href="/">Startseite</a>
+                <a class="btn btn-success navbar-link" onclick="submitForm()">Speichern</a>
             </td>
         </tr>
     </table>
+{% endblock %}
+
+{% block javaScriptCode %}
+    <script>
+        function submitForm() {
+            document.getElementById("editForm").submit()
+        }
+    </script>
 {% endblock %}
