--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -9,6 +9,7 @@
             width: 60%;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 10%;
         }
     </style>
 {% endblock %}
