--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -8,6 +8,7 @@
             width: 60%;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 10%;
         }
     </style>
 {% endblock %}
