--- a/templates/ShowPassword.html
+++ b/templates/ShowPassword.html
@@ -1,7 +1,6 @@
 {% extends 'Base.html' %}
 
-{% block script %}
-    <link rel="stylesheet" href="/static/style/bootstrap-3.3.7-dist/css/bootstrap.css">
+{% block style %}
     <style>
         .accountTbl {
             width: 60%;
@@ -33,6 +32,7 @@
             <td class="navbar-ls">
                 <a class="btn btn-primary navbar-link" href="/">Startseite</a>
                 <a class="btn btn-primary navbar-link" href="/editAccount/{{ pageValues.account['id'] }}">Edit</a>
+                <a class="btn btn-primary navbar-link" href="/generatePwd/{{ pageValues.account['id'] }}">Passwort generieren</a>
             </td>
         </tr>
     </table>
